--- a/popup.html
+++ b/popup.html
@@ -6,17 +6,20 @@
       body {
         font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
         font-size: 100%;
-        /*width: 300px;*/
+        width: 300px;
       }
       h1 {
         font-size: 1em;
       }
     </style>
+    <script src="Chart.js"></script>
     <script src="popup.js"></script>
+    <script src="eventPage.js"></script>
   </head>
   <body>
     <div>
       <p id="status"></p>
+      <canvas id="myChart" width="400" height="400"></canvas>
     </div>
   </body>
 </html>
