Graph cleanup, show time in nice format

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
         font-size: 1em;
       }
     </style>
-    <script src="Chart.js"></script>
+    <script src="Chart.bundle.js"></script>
     <script src="popup.js"></script>
     <script src="eventPage.js"></script>
   </head>
