--- a/popup.html
+++ b/popup.html
@@ -4,15 +4,10 @@
     <title>Getting Started Extension's Popup</title>
     <style>
       body {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
         width: 300px;
       }
-      h1 {
-        font-size: 1em;
-      }
     </style>
-    <script src="Chart.bundle.js"></script>
+    <script src="Chart.js"></script>
     <script src="popup.js"></script>
     <script src="eventPage.js"></script>
   </head>
