santize dates after 7 days, show message if no time wasted today

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>Time Waste Extension Popup</title>
     <style>
       body {
         width: 300px;
+        background-color: #ecf0f1;
+      }
+      h1 {
+        color: rgb(102,102,102);
+        font-family: 'Helvetica Neue';
+        font-size: 18px;
+        font-weight: normal;
+        text-align: center;
+        display: none;
+
       }
     </style>
     <script src="Chart.js"></script>
@@ -13,6 +23,7 @@
   </head>
   <body>
     <div>
+      <h1> Awesome, No Time Wasted Today! </h1>
       <canvas id="myChart" width="400" height="400"></canvas>
     </div>
   </body>
