able to remove items from list

--- a/options.html
+++ b/options.html
@@ -13,6 +13,19 @@
       background-color: rgb(84,94,115);
       text-align: center;
     }
+    #current-websites .storedsite:hover {
+      background-color: #e74c3c;
+      cursor: pointer;
+    }
+    #current-websites .storedsite:hover span:last-child{
+      display: inline-block;
+    }
+    #current-websites .storedsite:hover span:first-child{
+      display: none;
+    }
+    span:last-child {
+      display: none;
+    }
     input {
       text-align: center;
       background-color: rgb(84,94,115);
