start moving over to chrome sync local storage, cleanup options code

--- a/options.html
+++ b/options.html
@@ -41,7 +41,7 @@
   <div>
     <div id="current-websites"></div>
     <div class="storedsite">
-      <input type="text">
+      <input id="websiteInput" type="text">
     </div>
   </div>
 </body>
