--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,9 @@
         text-align: center;
         display: none;
       }
+      img {
+        cursor: pointer;
+      }
     </style>
     <script src="Chart.js"></script>
     <script src="popup.js"></script>
@@ -22,8 +25,9 @@
   </head>
   <body>
     <div>
-      <h1> Awesome, No Time Wasted Today! </h1>
+      <h1> No Websites Tracked Today! </h1>
       <canvas id="myChart" width="400" height="400"></canvas>
+      <img src="settings.png" width="15">
     </div>
   </body>
 </html>
