working with site and time tracker objects

--- a/options.html
+++ b/options.html
@@ -34,6 +34,8 @@
       color: #fff;
     }
   </style>
+  <script src="TimeTracker.js"></script>
+  <script src="Site.js"></script>
   <script src="eventPage.js"></script>
   <script src="options.js"></script>
 </head>
