--- a/options.html
+++ b/options.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Time Waste Extension Options </title>
+  <title> Gauge Extension Options </title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
   <style>
     body {
       padding: 10px;
+      font-family: 'Roboto', sans-serif;
     }
     .storedsite {
       color: #fff;
