initial commit with few bugs

--- a/options.html
+++ b/options.html
@@ -36,6 +36,7 @@
       color: #fff;
     }
   </style>
+  <script src="LocalStorageManager.js"></script>
   <script src="TimeTracker.js"></script>
   <script src="Site.js"></script>
   <script src="eventPage.js"></script>
