--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,7 @@
       }
     </style>
     <script src="TimeTracker.js"></script>
+    <script src="LocalStorageManager.js"></script>
     <script src="Site.js"></script>
     <script src="Chart.js"></script>
     <script src="popup.js"></script>
