--- a/options.html
+++ b/options.html
@@ -7,13 +7,14 @@
     body {
       padding: 10px;
       font-family: 'Roboto', sans-serif;
-      text-align: center;
     }
     .storedsite {
-      color: #fff;
       font-size: 15px;
       padding: 10px;
-      background-color: rgb(84,94,115);
+    }
+    .storedsite, #websiteInput {
+      text-align: center;
+      color: #fff;
     }
     #current-websites .storedsite span:hover {
       cursor: pointer;
@@ -24,12 +25,6 @@
     }
     #current-websites .storedsite:hover span:first-child{
       display: none;
-    }
-    input {
-      text-align: center;
-    }
-    input:focus {
-      color: #fff;
     }
     .options {
       display: none;
