move files into folders

--- a/options/options.html
+++ b/options/options.html
@@ -33,11 +33,11 @@
       margin: 0 10px;
     }
   </style>
-  <script src="LocalStorageManager.js"></script>
-  <script src="TimeTracker.js"></script>
-  <script src="Site.js"></script>
-  <script src="eventPage.js"></script>
-  <script src="options.js"></script>
+  <script src="../js/LocalStorageManager.js"></script>
+  <script src="../js/TimeTracker.js"></script>
+  <script src="../js/Site.js"></script>
+  <script src="/background/eventPage.js"></script>
+  <script src="/options/options.js"></script>
 </head>
 <body>
   <div>
