--- a/popup/popup.html
+++ b/popup/popup.html
@@ -18,16 +18,16 @@
         top: 14px;
       }
     </style>
-    <script src="TimeTracker.js"></script>
-    <script src="LocalStorageManager.js"></script>
-    <script src="Site.js"></script>
-    <script src="Chart.js"></script>
-    <script src="popup.js"></script>
-    <script src="eventPage.js"></script>
+    <script src="../js/TimeTracker.js"></script>
+    <script src="../js/LocalStorageManager.js"></script>
+    <script src="../js/Site.js"></script>
+    <script src="/js/Chart.min.js"></script>
+    <script src="/popup/popup.js"></script>
+    <script src="/background/eventPage.js"></script>
   </head>
   <body>
     <div>
-      <img src="settings.png" height="25">
+      <img src="/img/settings.png" height="25">
       <canvas id="myChart" height="300"></canvas>
     </div>
   </body>
