add idle option

--- a/options/options.html
+++ b/options/options.html
@@ -41,6 +41,10 @@
 </head>
 <body>
   <div>
+    <label>
+      <input type="checkbox" id="idle">
+      Pause Time Tracking After 30 seconds
+    </label>
     <div id="current-websites"></div>
     <div class="storedsite">
       <input id="websiteInput" type="text">
