fix sanitize, change Site Obj to prototype, add basic implementation of weekly graph stats

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -15,7 +15,7 @@
         position: absolute;
         cursor: pointer;
         right: 5px;
-        top: 14px;
+        top: 19px;
       }
     </style>
     <script src="../js/TimeTracker.js"></script>
@@ -28,6 +28,7 @@
   <body>
     <div>
       <img src="/img/settings.png" height="25">
+      <img src="/img/weekly.png" height="25" style="right: 35px;">
       <canvas id="myChart" height="300"></canvas>
     </div>
   </body>
