validate URL fix

--- a/options/options.html
+++ b/options/options.html
@@ -46,12 +46,14 @@
 </head>
 <body>
   <div>
-    <label>
-      <input type="checkbox" id="idle">
-      Pause Time Tracking After 30 seconds
-    </label>
+    <div>
+      <label>
+        <input type="checkbox" id="idle">
+        Pause Time Tracking After 30 seconds
+      </label>
+    </div>
     <div id="current-websites"></div>
-    <div class="storedsite">
+    <div class="storedsite" style="margin-top: 10px;">
       <input id="websiteInput" type="text" placeholder="example.com">
     </div>
   </div>
